# ecowatt-2026

./: .gitignore  LICENSE  README.md
backend/: .env.example  requirements.txt
backend/core/: asgi.py  settings.py  urls.py
backend/mediciones/: admin.py  apps.py  asgi.py  consumers.py  models.py  mqtt_client.py  routing.py  serializers.py  views.py
backend/nilm/: apps.py  views.py
docs/: api_contract.md  ml_pipeline.md  team_branch_review.md
frontend/ecowatt-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
hardware/Proteus/: Arduino-Programa.ino.hex  Medidor de voltaje.pdsprj  Medidor de voltaje.pdsprj.DESKTOP-QLJC2GM.User.9.workspace
ml/: README.md  pyproject.toml  requirements.txt
ml/data/: demo_hardware_simulated.json  refit_house8_summary.md  sample_measurements.csv
ml/models/: cost_regression_refit_house8.joblib  cost_regression_refit_house8_metrics.json  demo_nilm_benchmark_metrics.json  sgn_v1.joblib  sgn_v1.pt  sgn_v1_metrics.json  sgn_v2.joblib  sgn_v2.pt  sgn_v2_metrics.json  sgn_v3.joblib  sgn_v3.pt  sgn_v3_general.joblib  sgn_v3_general.pt  sgn_v3_general_metrics.json  sgn_v3_metrics.json
ml/src/ecowatt_ml/: __init__.py  config.py  convert_refit.py  data.py  generate_mock_data.py  personalize_sgn_v3.py  predict.py  preprocess.py  refit.py  refit_metadata.py  simulate_demo_data.py  train_cost_regression.py  train_demo_benchmark.py  train_sgn.py  train_sgn_v3.py
ml/src/ecowatt_ml/models/: __init__.py  sgn.py
ml/tests/: test_demo_simulation.py  test_preprocess.py  test_refit.py
(+41 files in other folders)
